outputs/main/reevo-qd_bpp_online_2025-07-26_00-55-47/problem_iter1_response22.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 28
    priorities = np.array([x**2 for x in remaining_capacities];
                                                              ^
SyntaxError: invalid syntax
12
4
